Wrong index position

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -111,7 +111,7 @@
 \usection{8.\bibnobreakspace Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
-\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{\textbf{Mass in matter tends to retard velocity in energy}, Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x_5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near\hyp{}by highly heated or heavily charged bodies.
+\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{\textbf{Mass in matter tends to retard velocity in energy}, Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x^5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near\hyp{}by highly heated or heavily charged bodies.
 \vs p015 8:4 The universal plan for the maintenance of equilibrium between matter and energy necessitates the everlasting making and unmaking of the lesser material units. The Universe Power Directors have the ability to condense and detain, or to expand and liberate, varying quantities of energy.
 \vs p015 8:5 Given a sufficient duration of retarding influence, gravity would eventually convert all energy into matter were it not for two factors: First, because of the antigravity influences of the energy controllers, and second, because organized matter tends to disintegrate under certain conditions found in very hot stars and under certain peculiar conditions in space near highly energized cold bodies of condensed matter.
 \vs p015 8:6 When mass becomes overaggregated and threatens to unbalance energy, to deplete the physical power circuits, the physical controllers intervene unless gravity’s own further tendency to overmaterialize energy is defeated by the occurrence of a collision among the dead giants of space, thus in an instant completely dissipating the cumulative collections of gravity. In these collisional episodes enormous masses of matter are suddenly converted into the rarest form of energy, and the struggle for universal equilibrium is begun anew. Eventually the larger physical systems become stabilized, become physically settled, and are swung into the balanced and established circuits of the superuniverses. Subsequent to this event no more collisions or other devastating catastrophes will occur in such established systems.
