Tidy up pictures

--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -24,7 +24,7 @@
 \vs p035 2:9 These Sons are not an increasing order; their number is stationary, although varying in each local universe. The number of Melchizedeks of record on their headquarters planet in Nebadon is upward of 10,000,000.
 \usection{3.\bibnobreakspace The Melchizedek Worlds}
 \vs p035 3:1 The Melchizedeks occupy a world of their own near Salvington, the universe headquarters. This sphere, by name Melchizedek, is the pilot world of the Salvington circuit of 70 primary spheres, each of which is encircled by 6 tributary spheres devoted to specialized activities. These marvellous spheres --- 70 primaries and 420 tributaries --- are often spoken of as the Melchizedek University. Ascending mortals from all the constellations of Nebadon pass through training on all 490 worlds in the acquirement of residential status on Salvington. But the education of ascenders is only one phase of the manifold activities taking place on the Salvington cluster of architectural spheres.
-\vs p035 3:2 The 490 spheres of the Salvington circuit are divided into 10 groups, each containing 7 primary and 42 tributary spheres. Each of these groups is under the general supervision of some one of the major orders of universe life. The first group, embracing the pilot world and the next 6 primary spheres in the encircling planetary procession, is under the supervision of the Melchizedeks. These Melchizedek worlds are:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{../urantia-pictures/SALVINGTON_700.jpg}\caption{Salvington by Gary~Tonge}\end{figure}}
+\vs p035 3:2 The 490 spheres of the Salvington circuit are divided into 10 groups, each containing 7 primary and 42 tributary spheres. Each of these groups is under the general supervision of some one of the major orders of universe life. The first group, embracing the pilot world and the next 6 primary spheres in the encircling planetary procession, is under the supervision of the Melchizedeks. These Melchizedek worlds are:\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{images/SALVINGTON-700.jpg}\caption{Salvington by Gary~Tonge}\end{figure}}
 \vs p035 3:3 \ublistelem{1.}\bibnobreakspace The pilot world --- the home world of the Melchizedek Sons.
 \vs p035 3:4 \ublistelem{2.}\bibnobreakspace The world of the physical\hyp{}life schools and the laboratories of living energies.
 \vs p035 3:5 \ublistelem{3.}\bibnobreakspace The world of morontia life.
