--- a/tex/p143.tex
+++ b/tex/p143.tex
@@ -37,7 +37,7 @@
 \usection{5.\bibnobreakspace The Woman of Sychar}
 \vs p143 5:1 When the Master and the 12 arrived at Jacob’s well, Jesus, being weary from the journey, tarried by the well while Philip took the apostles with him to assist in bringing food and tents from Sychar, for they were disposed to stay in this vicinity for a while. Peter and the Zebedee sons would have remained with Jesus, but he requested that they go with their brethren, saying: \textcolour{ubdarkred}{“Have no fear for me; these Samaritans will be friendly; only our brethren, the Jews, seek to harm us.”} And it was almost 18:00 on this summer’s evening when Jesus sat down by the well to await the return of the apostles.
 \vs p143 5:2 The water of Jacob’s well was less mineral than that from the wells of Sychar and was therefore much valued for drinking purposes. Jesus was thirsty, but there was no way of getting water from the well. When, therefore, a woman of Sychar came up with her water pitcher and prepared to draw from the well, Jesus said to her, \textcolour{ubdarkred}{“Give me a drink.”} This woman of Samaria knew Jesus was a Jew by his appearance and dress, and she surmised that he was a Galilean Jew from his accent. Her name was Nalda and she was a comely creature. She was much surprised to have a Jewish man thus speak to her at the well and ask for water, for it was not deemed proper in those days for a self\hyp{}respecting man to speak to a woman in public, much less for a Jew to converse with a Samaritan. Therefore Nalda asked Jesus, “How is it that you, being a Jew, ask for a drink of me, a Samaritan woman?” Jesus answered: \textcolour{ubdarkred}{“I have indeed asked you for a drink, but if you could only understand, you would ask me for a draught of the living water.”} Then said Nalda: “But, Sir, you have nothing to draw with, and the well is deep; whence, then, have you this living water? Are you greater than our father Jacob who gave us this well, and who drank thereof himself and his sons and his cattle also?”
-\vs p143 5:3 Jesus replied: \textcolour{ubdarkred}{“Everyone who drinks of this water will thirst again, but whosoever drinks of the water of the living spirit shall never thirst. And this living water shall become in him a well of refreshment springing up even to eternal life.”} Nalda then said: “Give me this water that I thirst not, neither come all the way hither to draw. Besides, anything which a Samaritan woman could receive from such a commendable Jew would be a pleasure.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Jesus-woman-Samaria.jpg}\caption{The woman of Samaria by Harold~Copping}\end{figure}}
+\vs p143 5:3 Jesus replied: \textcolour{ubdarkred}{“Everyone who drinks of this water will thirst again, but whosoever drinks of the water of the living spirit shall never thirst. And this living water shall become in him a well of refreshment springing up even to eternal life.”} Nalda then said: “Give me this water that I thirst not, neither come all the way hither to draw. Besides, anything which a Samaritan woman could receive from such a commendable Jew would be a pleasure.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Samaritan.jpg}\caption{The woman of Samaria by Harold~Copping}\end{figure}}
 \vs p143 5:4 Nalda did not know how to take Jesus’ willingness to talk with her. She beheld in the Master’s face the countenance of an upright and holy man, but she mistook friendliness for commonplace familiarity, and she misinterpreted his figure of speech as a form of making advances to her. And being a woman of lax morals, she was minded openly to become flirtatious, when Jesus, looking straight into her eyes, with a commanding voice said, \textcolour{ubdarkred}{“Woman, go get your husband and bring him hither.”} This command brought Nalda to her senses. She saw that she had misjudged the Master’s kindness; she perceived that she had misconstrued his manner of speech. She was frightened; she began to realize that she stood in the presence of an unusual person, and groping about in her mind for a suitable reply, in great confusion, she said, “But, Sir, I cannot call my husband, for I have no husband.” Then said Jesus: \textcolour{ubdarkred}{“You have spoken the truth, for, while you may have once had a husband, he with whom you are now living is not your husband. Better it would be if you would cease to trifle with my words and seek for the living water which I have this day offered you.”}
 \vs p143 5:5 By this time Nalda was sobered, and her better self was awakened. She was not an immoral woman wholly by choice. She had been ruthlessly and unjustly cast aside by her husband and in dire straits had consented to live with a certain Greek as his wife, but without marriage. Nalda now felt greatly ashamed that she had so unthinkingly spoken to Jesus, and she most penitently addressed the Master, saying: “My Lord, I repent of my manner of speaking to you, for I perceive that you are a holy man or maybe a prophet.” And she was just about to seek direct and personal help from the Master when she did what so many have done before and since --- dodged the issue of personal salvation by turning to the discussion of theology and philosophy. She quickly turned the conversation from her own needs to a theological controversy. Pointing over to Mount Gerizim, she continued: “Our fathers worshipped on this mountain, and yet \bibemph{you} would say that in Jerusalem is the place where men ought to worship; which, then, is the right place to worship God?”
 \vs p143 5:6 Jesus perceived the attempt of the woman’s soul to avoid direct and searching contact with its Maker, but he also saw that there was present in her soul a desire to know the better way of life. After all, there was in Nalda’s heart a true thirst for the living water; therefore he dealt patiently with her, saying: \textcolour{ubdarkred}{“Woman, let me say to you that the day is soon coming when neither on this mountain nor in Jerusalem will you worship the Father. But now you worship that which you know not, a mixture of the religion of many pagan gods and gentile philosophies. The Jews at least know whom they worship; they have removed all confusion by concentrating their worship upon one God, Yahweh. But you should believe me when I say that the hour will soon come --- even now is --- when all sincere worshippers will worship the Father in spirit and in truth, for it is just such worshippers the Father seeks. God is spirit, and they who worship him must worship him in spirit and in truth. Your salvation comes not from knowing how others should worship or where but by receiving into your own heart this living water which I am offering you even now.”}
