--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -14,7 +14,7 @@
 \vs p163 2:2 \pc One earnest disciple came to Jesus, saying: “Master, I would be one of your new apostles, but my father is very old and near death; could I be permitted to return home to bury him?” To this man Jesus said: \textcolour{ubdarkred}{“My son, the foxes have holes, and the birds of heaven have nests, but the Son of Man has nowhere to lay his head. You are a faithful disciple, and you can remain such while you return home to minister to your loved ones, but not so with my gospel messengers. They have forsaken all to follow me and proclaim the kingdom. If you would be an ordained teacher, you must let others bury the dead while you go forth to publish the good news.”} And this man went away in great disappointment.
 \vs p163 2:3 Another disciple came to the Master and said: “I would become an ordained messenger, but I would like to go to my home for a short while to comfort my family.” And Jesus replied: \textcolour{ubdarkred}{“If you would be ordained, you must be willing to forsake all. The gospel messengers cannot have divided affections. No man, having put his hand to the plough, if he turns back, is worthy to become a messenger of the kingdom.”}
 \vs p163 2:4 \pc Then Andrew brought to Jesus a certain rich young man who was a devout believer, and who desired to receive ordination. This young man, Matadormus, was a member of the Jerusalem Sanhedrin; he had heard Jesus teach and had been subsequently instructed in the gospel of the kingdom by Peter and the other apostles. Jesus talked with Matadormus concerning the requirements of ordination and requested that he defer decision until after he had thought more fully about the matter. Early the next morning, as Jesus was going for a walk, this young man accosted him and said: “Master, I would know from you the assurances of eternal life. Seeing that I have observed all the commandments from my youth, I would like to know what more I must do to gain eternal life?” In answer to this question Jesus said: \textcolour{ubdarkred}{“If you keep all the commandments --- do not commit adultery, do not kill, do not steal, do not bear false witness, do not defraud, honour your parents --- you do well, but salvation is the reward of faith, not merely of works. Do you believe this gospel of the kingdom?”} And Matadormus answered: “Yes, Master, I do believe everything you and your apostles have taught me.” And Jesus said, \textcolour{ubdarkred}{“Then are you indeed my disciple and a child of the kingdom.”}
-\vs p163 2:5 Then said the young man: “But, Master, I am not content to be your disciple; I would be one of your new messengers.” When Jesus heard this, he looked down upon him with a great love and said: \textcolour{ubdarkred}{“I will have you to be one of my messengers if you are willing to pay the price, if you will supply the one thing which you lack.”} Matadormus replied: “Master, I will do anything if I may be allowed to follow you.” Jesus, kissing the kneeling young man on the forehead, said: \textcolour{ubdarkred}{“If you would be my messenger, go and sell all that you have and, when you have bestowed the proceeds upon the poor or upon your brethren, come and follow me, and you shall have treasure in the kingdom of heaven.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Heinrich_Hofmann_Christ_and_the_Rich_Young_Ruler_525.jpg}\caption{Christ and the Rich Young Ruler by Heinrich~Hofmann}\end{figure}}
+\vs p163 2:5 Then said the young man: “But, Master, I am not content to be your disciple; I would be one of your new messengers.” When Jesus heard this, he looked down upon him with a great love and said: \textcolour{ubdarkred}{“I will have you to be one of my messengers if you are willing to pay the price, if you will supply the one thing which you lack.”} Matadormus replied: “Master, I will do anything if I may be allowed to follow you.” Jesus, kissing the kneeling young man on the forehead, said: \textcolour{ubdarkred}{“If you would be my messenger, go and sell all that you have and, when you have bestowed the proceeds upon the poor or upon your brethren, come and follow me, and you shall have treasure in the kingdom of heaven.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Rich.jpg}\caption{Christ and the Rich Young Ruler by Heinrich~Hofmann}\end{figure}}
 \vs p163 2:6 When Matadormus heard this, his countenance fell. He arose and went away sorrowful, for he had great possessions. This wealthy young Pharisee had been raised to believe that wealth was the token of God’s favour. Jesus knew that he was not free from the love of himself and his riches. The Master wanted to deliver him from the \bibemph{love} of wealth, not necessarily from the wealth. While the disciples of Jesus did not part with all their worldly goods, the apostles and the 70 did. Matadormus desired to be one of the 70 new messengers, and that was the reason for Jesus’ requiring him to part with all of his temporal possessions.
 \vs p163 2:7 \pc Almost every human being has some one thing which is held on to as a pet evil, and which the entrance into the kingdom of heaven requires as a part of the price of admission. If Matadormus had parted with his wealth, it probably would have been put right back into his hands for administration as treasurer of the 70. For later on, after the establishment of the church at Jerusalem, he did obey the Master’s injunction, although it was then too late to enjoy membership in the 70, and he became the treasurer of the Jerusalem church, of which James the Lord’s brother in the flesh was the head.
 \vs p163 2:8 Thus always it was and forever will be: Men must arrive at their own decisions. There is a certain range of the freedom of choice which mortals may exercise. The forces of the spiritual world will not coerce man; they allow him to go the way of his own choosing.
@@ -57,7 +57,7 @@
 \vs p163 6:3 And it was at this time, just before partaking of the evening meal, that Jesus experienced one of those rare moments of emotional ecstasy which his followers had occasionally witnessed. He said: \textcolour{ubdarkred}{“I thank you, my Father, Lord of heaven and earth, that, while this wonderful gospel was hidden from the wise and self\hyp{}righteous, the spirit has revealed these spiritual glories to these children of the kingdom. Yes, my Father, it must have been pleasing in your sight to do this, and I rejoice to know that the good news will spread to all the world even after I shall have returned to you and the work which you have given me to perform. I am mightily moved as I realize you are about to deliver all authority into my hands, that only you really know who I am, and that only I really know you, and those to whom I have revealed you. And when I have finished this revelation to my brethren in the flesh, I will continue the revelation to your creatures on high.”}
 \vs p163 6:4 When Jesus had thus spoken to the Father, he turned aside to speak to his apostles and ministers: \textcolour{ubdarkred}{“Blessed are the eyes which see and the ears which hear these things. Let me say to you that many prophets and many of the great men of the past ages have desired to behold what you now see, but it was not granted them. And many generations of the children of light yet to come will, when they hear of these things, envy you who have heard and seen them.”}
 \vs p163 6:5 Then, speaking to all the disciples, he said: \textcolour{ubdarkred}{“You have heard how many cities and villages have received the good news of the kingdom, and how my ministers and teachers have been received by both the Jew and the gentile. And blessed indeed are these communities which have elected to believe the gospel of the kingdom. But woe upon the light\hyp{}rejecting inhabitants of Chorazin, Bethsaida\hyp{}Julias, and Capernaum, the cities which did not well receive these messengers. I declare that, if the mighty works done in these places had been done in Tyre and Sidon, the people of these so\hyp{}called heathen cities would have long since repented in sackcloth and ashes. It shall indeed be more tolerable for Tyre and Sidon in the day of judgment.”}
-\vs p163 6:6 \pc The next day being the Sabbath, Jesus went apart with the 70 and said to them: \textcolour{ubdarkred}{“I did indeed rejoice with you when you came back bearing the good tidings of the reception of the gospel of the kingdom by so many people scattered throughout Galilee, Samaria, and Judea. But why were you so surprisingly elated? Did you not expect that your message would manifest power in its delivery? Did you go forth with so little faith in this gospel that you come back in surprise at its effectiveness? And now, while I would not quench your spirit of rejoicing, I would sternly warn you against the subtleties of pride, spiritual pride. If you could understand the downfall of Lucifer, the iniquitous one, you would solemnly shun all forms of spiritual pride.}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Harold_Copping_Come_Unto_Me_525.jpg}\caption{Come Unto Me by Harold~Copping}\end{figure}}
+\vs p163 6:6 \pc The next day being the Sabbath, Jesus went apart with the 70 and said to them: \textcolour{ubdarkred}{“I did indeed rejoice with you when you came back bearing the good tidings of the reception of the gospel of the kingdom by so many people scattered throughout Galilee, Samaria, and Judea. But why were you so surprisingly elated? Did you not expect that your message would manifest power in its delivery? Did you go forth with so little faith in this gospel that you come back in surprise at its effectiveness? And now, while I would not quench your spirit of rejoicing, I would sternly warn you against the subtleties of pride, spiritual pride. If you could understand the downfall of Lucifer, the iniquitous one, you would solemnly shun all forms of spiritual pride.}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Come.jpg}\caption{Come Unto Me by Harold~Copping}\end{figure}}
 \vs p163 6:7 \textcolour{ubdarkred}{“You have entered upon this great work of teaching mortal man that he is a son of God. I have shown you the way; go forth to do your duty and be not weary in well doing. To you and to all who shall follow in your steps down through the ages, let me say: I always stand near, and my invitation\hyp{}call is, and ever shall be, Come to me all you who labour and are heavy laden, and I will give you rest. Take my yoke upon you and learn of me, for I am true and loyal, and you shall find spiritual rest for your souls.”}
 \vs p163 6:8 \pc And they found the Master’s words to be true when they put his promises to the test. And since that day countless thousands also have tested and proved the surety of these same promises.
 \usection{7.\bibnobreakspace Preparation for the Last Mission}
