--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -4,7 +4,7 @@
 \vs p182 0:2 As Jesus and the 11 made their way back to camp, the apostles began to wonder about the meaning of Judas’s prolonged absence, and they spoke to one another concerning the Master’s prediction that one of them would betray him, and for the first time they suspected that all was not well with Judas Iscariot. But they did not engage in open comment about Judas until they reached the camp and observed that he was not there, waiting to receive them. When they all besieged Andrew to know what had become of Judas, their chief remarked only, “I do not know where Judas is, but I fear he has deserted us.”
 \usection{1.\bibnobreakspace The Last Group Prayer}
 \vs p182 1:1 A few moments after arriving at camp, Jesus said to them: \textcolour{ubdarkred}{“My friends and brethren, my time with you is now very short, and I desire that we draw apart by ourselves while we pray to our Father in heaven for strength to sustain us in this hour and henceforth in all the work we must do in his name.”}
-\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
+\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
 \vs p182 1:3 \textcolour{ubdarkred}{“Father, my hour has come; now glorify your Son that the Son may glorify you. I know that you have given me full authority over all living creatures in my realm, and I will give eternal life to all who will become faith sons of God. And this is eternal life, that my creatures should know you as the only true God and Father of all, and that they should believe in him whom you sent into the world. Father, I have exalted you on earth and have accomplished the work which you gave me to do. I have almost finished my bestowal upon the children of our own creation; there remains only for me to lay down my life in the flesh. And now, O my Father, glorify me with the glory which I had with you before this world was and receive me once more at your right hand.}
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
 \vs p182 1:5 \textcolour{ubdarkred}{“You gave me 12 men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
