--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -28,9 +28,9 @@
 \usection{3.\bibnobreakspace At Alexandria}
 \vs p130 3:1 It had been an eventful visit at Caesarea, and when the boat was ready, Jesus and his two friends departed at noon one day for Alexandria in Egypt.
 \vs p130 3:2 The three enjoyed a most pleasant passage to Alexandria. Ganid was delighted with the voyage and kept Jesus busy answering questions. As they approached the city’s harbour, the young man was thrilled by the great lighthouse of Pharos, located on the island which Alexander had joined by a mole to the mainland, thus creating two magnificent harbours and thereby making Alexandria the maritime commercial crossroads of Africa, Asia, and Europe. This great lighthouse was one of the seven wonders of the world and was the forerunner of all subsequent lighthouses. They arose early in the morning to view this splendid lifesaving device of man, and amidst the exclamations of Ganid Jesus said: \textcolour{ubdarkred}{“And you, my son, will be like this lighthouse when you return to India, even after your father is laid to rest; you will become like the light of life to those who sit about you in darkness, showing all who so desire the way to reach the harbour of salvation in safety.”} And as Ganid squeezed Jesus’ hand, he said, “I will.”
-\vs p130 3:3 \pc And again we remark that the early teachers of the Christian religion made a great mistake when they so exclusively turned their attention to the western civilization of the Roman world. The teachings of Jesus, as they were held by the Mesopotamian believers of the first century, would have been readily received by the various groups of Asiatic religionists.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Jesus-Ganid-lighthouse.jpg}\caption{Jesus and Ganid at the Great Lighthouse by Slawa~Radziszewska}\end{figure}}
+\vs p130 3:3 \pc And again we remark that the early teachers of the Christian religion made a great mistake when they so exclusively turned their attention to the western civilization of the Roman world. The teachings of Jesus, as they were held by the Mesopotamian believers of the first century, would have been readily received by the various groups of Asiatic religionists.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Ganid-lighthouse.jpg}\caption{Jesus and Ganid at the Great Lighthouse by Slawa~Radziszewska}\end{figure}}
 \vs p130 3:4 \pc By the fourth hour after landing they were settled near the eastern end of the long and broad avenue, 30\,m wide and 8\,km long, which stretched on out to the western limits of this city of 1,000,000 people. After the first survey of the city’s chief attractions --- university (museum), library, the royal mausoleum of Alexander, the palace, temple of Neptune, theatre, and gymnasium --- Gonod addressed himself to business while Jesus and Ganid went to the library, the greatest in the world. Here were assembled nearly 1,000,000 manuscripts from all the civilized world: Greece, Rome, Palestine, Parthia, India, China, and even Japan. In this library Ganid saw the largest collection of Indian literature in all the world; and they spent some time here each day throughout their stay in Alexandria. Jesus told Ganid about the translation of the Hebrew scriptures into Greek at this place. And they discussed again and again all the religions of the world, Jesus endeavouring to point out to this young mind the truth in each, always adding: \textcolour{ubdarkred}{“But Yahweh is the God developed from the revelations of Melchizedek and the covenant of Abraham. The Jews were the offspring of Abraham and subsequently occupied the very land wherein Melchizedek had lived and taught, and from which he sent teachers to all the world; and their religion eventually portrayed a clearer recognition of the Lord God of Israel as the Universal Father in heaven than any other world religion.”}
-\vs p130 3:5 \pc Under Jesus’ direction Ganid made a collection of the teachings of all those religions of the world which recognized a Universal Deity, even though they might also give more or less recognition to subordinate deities. After much discussion Jesus and Ganid decided that the Romans had no real God in their religion, that their religion was hardly more than emperor worship. The Greeks, they concluded, had a philosophy but hardly a religion with a personal God. The mystery cults they discarded because of the confusion of their multiplicity, and because their varied concepts of Deity seemed to be derived from other and older religions.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Jesus-Ganid-Alexandria.jpg}\caption{Studying at the Alexandrian Library by Slawa~Radziszewska}\end{figure}}
+\vs p130 3:5 \pc Under Jesus’ direction Ganid made a collection of the teachings of all those religions of the world which recognized a Universal Deity, even though they might also give more or less recognition to subordinate deities. After much discussion Jesus and Ganid decided that the Romans had no real God in their religion, that their religion was hardly more than emperor worship. The Greeks, they concluded, had a philosophy but hardly a religion with a personal God. The mystery cults they discarded because of the confusion of their multiplicity, and because their varied concepts of Deity seemed to be derived from other and older religions.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Ganid-Alexandria.jpg}\caption{Studying at the Alexandrian Library by Slawa~Radziszewska}\end{figure}}
 \vs p130 3:6 Although these translations were made at Alexandria, Ganid did not finally arrange these selections and add his own personal conclusions until near the end of their sojourn in Rome. He was much surprised to discover that the best of the authors of the world’s sacred literature all more or less clearly recognized the existence of an eternal God and were much in agreement with regard to his character and his relationship with mortal man.
 \vs p130 3:7 \pc Jesus and Ganid spent much time in the museum during their stay in Alexandria. This museum was not a collection of rare objects but rather a university of fine art, science, and literature. Learned professors here gave daily lectures, and in those times this was the intellectual centre of the Occidental world. Day by day Jesus interpreted the lectures to Ganid; one day during the second week the young man exclaimed: “Teacher Joshua, you know more than these professors; you should stand up and tell them the great things you have told me; they are befogged by much thinking. I shall speak to my father and have him arrange it.” Jesus smiled, saying: \textcolour{ubdarkred}{“You are an admiring pupil, but these teachers are not minded that you and I should instruct them. The pride of unspiritualized learning is a treacherous thing in human experience. The true teacher maintains his intellectual integrity by ever remaining a learner.”}
 \vs p130 3:8 Alexandria was the city of the blended culture of the Occident and next to Rome the largest and most magnificent in the world. Here was located the largest Jewish synagogue in the world, the seat of government of the Alexandria Sanhedrin, the 70 ruling elders.
@@ -58,7 +58,7 @@
 \vs p130 5:3 One day when Ganid asked Jesus why he had not devoted himself to the work of a public teacher, he said: \textcolour{ubdarkred}{“My son, everything must await the coming of its time. You are born into the world, but no amount of anxiety and no manifestation of impatience will help you to grow up. You must, in all such matters, wait upon time. Time alone will ripen the green fruit upon the tree. Season follows season and sundown follows sunrise only with the passing of time. I am now on the way to Rome with you and your father, and that is sufficient for today. My tomorrow is wholly in the hands of my Father in heaven.”} And then he told Ganid the story of Moses and the 40 years of watchful waiting and continued preparation.
 \vs p130 5:4 One thing happened on a visit to Fair Havens which Ganid never forgot; the memory of this episode always caused him to wish he might do something to change the caste system of his native India. A drunken degenerate was attacking a slave girl on the public highway. When Jesus saw the plight of the girl, he rushed forward and drew the maiden away from the assault of the madman. While the frightened child clung to him, he held the infuriated man at a safe distance by his powerful extended right arm until the poor fellow had exhausted himself beating the air with his angry blows. Ganid felt a strong impulse to help Jesus handle the affair, but his father forbade him. Though they could not speak the girl’s language, she could understand their act of mercy and gave token of her heartfelt appreciation as they all three escorted her home. This was probably as near a personal encounter with his fellows as Jesus ever had throughout his entire life in the flesh. But he had a difficult task that evening trying to explain to Ganid why he did not smite the drunken man. Ganid thought this man should have been struck at least as many times as he had struck the girl.
 \usection{6.\bibnobreakspace The Young Man Who Was Afraid}
-\vs p130 6:1 While they were up in the mountains, Jesus had a long talk with a young man who was fearful and downcast. Failing to derive comfort and courage from association with his fellows, this youth had sought the solitude of the hills; he had grown up with a feeling of helplessness and inferiority. These natural tendencies had been augmented by numerous difficult circumstances which the lad had encountered as he grew up, notably, the loss of his father when he was 12 years of age. As they met, Jesus said: \textcolour{ubdarkred}{“Greetings, my friend! why so downcast on such a beautiful day? If something has happened to distress you, perhaps I can in some manner assist you. At any rate it affords me real pleasure to proffer my services.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Russ_Docken_The_young_man_who_was_afraid_525x667.jpg}\caption{The young man who was afraid by Russ Docken}\end{figure}}
+\vs p130 6:1 While they were up in the mountains, Jesus had a long talk with a young man who was fearful and downcast. Failing to derive comfort and courage from association with his fellows, this youth had sought the solitude of the hills; he had grown up with a feeling of helplessness and inferiority. These natural tendencies had been augmented by numerous difficult circumstances which the lad had encountered as he grew up, notably, the loss of his father when he was 12 years of age. As they met, Jesus said: \textcolour{ubdarkred}{“Greetings, my friend! why so downcast on such a beautiful day? If something has happened to distress you, perhaps I can in some manner assist you. At any rate it affords me real pleasure to proffer my services.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Young-man.jpg}\caption{The young man who was afraid by Russ Docken}\end{figure}}
 \vs p130 6:2 The young man was disinclined to talk, and so Jesus made a second approach to his soul, saying: \textcolour{ubdarkred}{“I understand you come up in these hills to get away from folks; so, of course, you do not want to talk with me, but I would like to know whether you are familiar with these hills; do you know the direction of the trails? and, perchance, could you inform me as to the best route to Phenix?”} Now this youth was very familiar with these mountains, and he really became much interested in telling Jesus the way to Phenix, so much so that he marked out all the trails on the ground and fully explained every detail. But he was startled and made curious when Jesus, after saying good\hyp{}bye and making as if he were taking leave, suddenly turned to him, saying: \textcolour{ubdarkred}{“I well know you wish to be left alone with your disconsolation; but it would be neither kind nor fair for me to receive such generous help from you as to how best to find my way to Phenix and then unthinkingly to go away from you without making the least effort to answer your appealing request for help and guidance regarding the best route to the goal of destiny which you seek in your heart while you tarry here on the mountainside. As you so well know the trails to Phenix, having traversed them many times, so do I well know the way to the city of your disappointed hopes and thwarted ambitions. And since you have asked me for help, I will not disappoint you.”} The youth was almost overcome, but he managed to stammer out, “But --- I did not ask you for anything --- ” And Jesus, laying a gentle hand on his shoulder, said: \textcolour{ubdarkred}{“No, son, not with words but with longing looks did you appeal to my heart. My boy, to one who loves his fellows there is an eloquent appeal for help in your countenance of discouragement and despair. Sit down with me while I tell you of the service trails and happiness highways which lead from the sorrows of self to the joys of loving activities in the brotherhood of men and in the service of the God of heaven.”}
 \vs p130 6:3 By this time the young man very much desired to talk with Jesus, and he knelt at his feet imploring Jesus to help him, to show him the way of escape from his world of personal sorrow and defeat. Said Jesus: “My friend, arise! Stand up like a man! You may be surrounded with small enemies and be retarded by many obstacles, but the big things and the real things of this world and the universe are on your side. The sun rises every morning to salute you just as it does the most powerful and prosperous man on earth. Look --- you have a strong body and powerful muscles --- your physical equipment is better than the average. Of course, it is just about useless while you sit out here on the mountainside and grieve over your misfortunes, real and fancied. But you could do great things with your body if you would hasten off to where great things are waiting to be done. You are trying to run away from your unhappy self, but it cannot be done. You and your problems of living are real; you cannot escape them as long as you live. But look again, your mind is clear and capable. Your strong body has an intelligent mind to direct it. Set your mind at work to solve its problems; teach your intellect to work for you; refuse longer to be dominated by fear like an unthinking animal. Your mind should be your courageous ally in the solution of your life problems rather than your being, as you have been, its abject fear\hyp{}slave and the bond servant of depression and defeat. But most valuable of all, your potential of real achievement is the spirit which lives within you, and which will stimulate and inspire your mind to control itself and activate the body if you will release it from the fetters of fear and thus enable your spiritual nature to begin your deliverance from the evils of inaction by the power\hyp{}presence of living faith. And then, forthwith, will this faith vanquish fear of men by the compelling presence of that new and all\hyp{}dominating \bibemph{love of your fellows} which will so soon fill your soul to overflowing because of the consciousness which has been born in your heart that you are a child of God.
 \vs p130 6:4 \textcolour{ubdarkred}{“This day, my son, you are to be reborn, re\hyp{}established as a man of faith, courage, and devoted service to man, for God’s sake. And when you become so readjusted to life within yourself, you become likewise readjusted to the universe; you have been born again --- born of the spirit --- and henceforth will your whole life become one of victorious accomplishment. Trouble will invigorate you; disappointment will spur you on; difficulties will challenge you; and obstacles will stimulate you. Arise, young man! Say farewell to the life of cringing fear and fleeing cowardice. Hasten back to duty and live your life in the flesh as a son of God, a mortal dedicated to the ennobling service of man on earth and destined to the superb and eternal service of God in eternity.”}
