--- a/tex/p132.tex
+++ b/tex/p132.tex
@@ -1,6 +1,6 @@
 \upaper{132}{The Sojourn at Rome}
 \author{Midwayer Commission}
-\vs p132 0:1 Since Gonod carried greetings from the princes of India to Tiberius, the Roman ruler, on the third day after their arrival in Rome the two Indians and Jesus appeared before him. The morose emperor was unusually cheerful on this day and chatted long with the trio. And when they had gone from his presence, the emperor, referring to Jesus, remarked to the aide standing on his right, “If I had that fellow’s kingly bearing and gracious manner, I would be a real emperor, eh?”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Jesus-Meets-Tiberius.jpg}\caption{Jesus Meets Tiberius by Slawa~Radziszewska}\end{figure}}
+\vs p132 0:1 Since Gonod carried greetings from the princes of India to Tiberius, the Roman ruler, on the third day after their arrival in Rome the two Indians and Jesus appeared before him. The morose emperor was unusually cheerful on this day and chatted long with the trio. And when they had gone from his presence, the emperor, referring to Jesus, remarked to the aide standing on his right, “If I had that fellow’s kingly bearing and gracious manner, I would be a real emperor, eh?”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Meets-Tiberius.jpg}\caption{Jesus Meets Tiberius by Slawa~Radziszewska}\end{figure}}
 \vs p132 0:2 \pc While at Rome, Ganid had regular hours for study and for visiting places of interest about the city. His father had much business to transact, and desiring that his son grow up to become a worthy successor in the management of his vast commercial interests, he thought the time had come to introduce the boy to the business world. There were many citizens of India in Rome, and often one of Gonod’s own employees would accompany him as interpreter so that Jesus would have whole days to himself; this gave him time in which to become thoroughly acquainted with this city of 2,000,000 inhabitants. He was frequently to be found in the forum, the centre of political, legal, and business life. He often went up to the Capitolium and pondered the bondage of ignorance in which these Romans were held as he beheld this magnificent temple dedicated to Jupiter, Juno, and Minerva. He also spent much time on Palatine hill, where were located the emperor’s residence, the temple of Apollo, and the Greek and Latin libraries.
 \vs p132 0:3 \pc At this time the Roman Empire included all of southern Europe, Asia Minor, Syria, Egypt, and north\hyp{}west Africa; and its inhabitants embraced the citizens of every country of the Eastern Hemisphere. His desire to study and mingle with this cosmopolitan aggregation of Urantia mortals was the chief reason why Jesus consented to make this journey.
 \vs p132 0:4 Jesus learned much about men while in Rome, but the most valuable of all the manifold experiences of his six months’ sojourn in that city was his contact with, and influence upon, the religious leaders of the empire’s capital. Before the end of the first week in Rome Jesus had sought out, and had made the acquaintance of, the worth\hyp{}while leaders of the Cynics, the Stoics, and the mystery cults, in particular the Mithraic group. Whether or not it was apparent to Jesus that the Jews were going to reject his mission, he most certainly foresaw that his messengers were presently coming to Rome to proclaim the kingdom of heaven; and he therefore set about, in the most amazing manner, to prepare the way for the better and more certain reception of their message. He selected 5 of the leading Stoics, 11 of the Cynics, and 16 of the mystery\hyp{}cult leaders and spent much of his spare time for almost 6 months in intimate association with these religious teachers. And this was his method of instruction: Never once did he attack their errors or even mention the flaws in their teachings. In each case he would select the truth in what they taught and then proceed so to embellish and illuminate this truth in their minds that in a very short time this enhancement of the truth effectively crowded out the associated error; and thus were these Jesus\hyp{}taught men and women prepared for the subsequent recognition of additional and similar truths in the teachings of the early Christian missionaries. It was this early acceptance of the teachings of the gospel preachers which gave that powerful impetus to the rapid spread of Christianity in Rome and from there throughout the empire.
@@ -79,7 +79,7 @@
 \vs p132 6:3 \pc That night, as Gonod listened to the recital of these experiences, he said to Jesus, good\hyp{}naturedly: “I propose to make a scholar or a businessman of my son, and now you start out to make a philosopher or philanthropist of him.” And Jesus smilingly replied: \textcolour{ubdarkred}{“Perhaps we will make him all four; then can he enjoy a fourfold satisfaction in life as his ear for the recognition of human melody will be able to recognize four tones instead of one.”} Then said Gonod: “I perceive that you really are a philosopher. You must write a book for future generations.” And Jesus replied: \textcolour{ubdarkred}{“Not a book --- my mission is to live a life in this generation and for all generations. I --- ”} but he stopped, saying to Ganid, \textcolour{ubdarkred}{“My son, it is time to retire.”}
 \usection{7.\bibnobreakspace Trips about Rome}
 \vs p132 7:1 Jesus, Gonod, and Ganid made five trips away from Rome to points of interest in the surrounding territory. On their visit to the northern Italian lakes Jesus had the long talk with Ganid concerning the impossibility of teaching a man about God if the man does not desire to know God. They had casually met a thoughtless pagan while on their journey up to the lakes, and Ganid was surprised that Jesus did not follow out his usual practice of enlisting the man in conversation which would naturally lead up to the discussion of spiritual questions. When Ganid asked his teacher why he evinced so little interest in this pagan, Jesus answered:
-\vs p132 7:2 \pc \textcolour{ubdarkred}{“Ganid, the man was not hungry for truth. He was not dissatisfied with himself. He was not ready to ask for help, and the eyes of his mind were not open to receive light for the soul. That man was not ripe for the harvest of salvation; he must be allowed more time for the trials and difficulties of life to prepare him for the reception of wisdom and higher learning. Or, if we could have him live with us, we might by our lives show him the Father in heaven, and thus would he become so attracted by our lives as sons of God that he would be constrained to inquire about our Father. You cannot reveal God to those who do not seek for him; you cannot lead unwilling souls into the joys of salvation. Man must become hungry for truth as a result of the experiences of living, or he must desire to know God as the result of contact with the lives of those who are acquainted with the divine Father before another human being can act as the means of leading such a fellow mortal to the Father in heaven. If we know God, our real business on earth is so to live as to permit the Father to reveal himself in our lives, and thus will all God\hyp{}seeking persons see the Father and ask for our help in finding out more about the God who in this manner finds expression in our lives.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Slawa-Radziszewska-The-Thoughtless-Pagan-525.jpg}\caption{The Thoughtless Pagan by Slawa Radziszewska}\end{figure}}
+\vs p132 7:2 \pc \textcolour{ubdarkred}{“Ganid, the man was not hungry for truth. He was not dissatisfied with himself. He was not ready to ask for help, and the eyes of his mind were not open to receive light for the soul. That man was not ripe for the harvest of salvation; he must be allowed more time for the trials and difficulties of life to prepare him for the reception of wisdom and higher learning. Or, if we could have him live with us, we might by our lives show him the Father in heaven, and thus would he become so attracted by our lives as sons of God that he would be constrained to inquire about our Father. You cannot reveal God to those who do not seek for him; you cannot lead unwilling souls into the joys of salvation. Man must become hungry for truth as a result of the experiences of living, or he must desire to know God as the result of contact with the lives of those who are acquainted with the divine Father before another human being can act as the means of leading such a fellow mortal to the Father in heaven. If we know God, our real business on earth is so to live as to permit the Father to reveal himself in our lives, and thus will all God\hyp{}seeking persons see the Father and ask for our help in finding out more about the God who in this manner finds expression in our lives.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/The-Thoughtless-Pagan.jpg}\caption{The Thoughtless Pagan by Slawa Radziszewska}\end{figure}}
 \vs p132 7:3 \pc It was on the visit to Switzerland, up in the mountains, that Jesus had an all\hyp{}day talk with both father and son about Buddhism. Many times Ganid had asked Jesus direct questions about Buddha, but he had always received more or less evasive replies. Now, in the presence of the son, the father asked Jesus a direct question about Buddha, and he received a direct reply. Said Gonod: “I would really like to know what you think of Buddha.” And Jesus answered:
 \vs p132 7:4 \textcolour{ubdarkred}{“Your Buddha was much better than your Buddhism. Buddha was a great man, even a prophet to his people, but he was an orphan prophet; by that I mean that he early lost sight of his spiritual Father, the Father in heaven. His experience was tragic. He tried to live and teach as a messenger of God, but without God. Buddha guided his ship of salvation right up to the safe harbour, right up to the entrance to the haven of mortal salvation, and there, because of faulty charts of navigation, the good ship ran aground. There it has rested these many generations, motionless and almost hopelessly stranded. And thereon have many of your people remained all these years. They live within hailing distance of the safe waters of rest, but they refuse to enter because the noble craft of the good Buddha met the misfortune of grounding just outside the harbour. And the Buddhist peoples never will enter this harbour unless they abandon the philosophic craft of their prophet and seize upon his noble spirit. Had your people remained true to the spirit of Buddha, you would have long since entered your haven of spirit tranquillity, soul rest, and assurance of salvation.}
 \vs p132 7:5 \textcolour{ubdarkred}{“You see, Gonod, Buddha knew God in spirit but failed clearly to discover him in mind; the Jews discovered God in mind but largely failed to know him in spirit. Today, the Buddhists flounder about in a philosophy without God, while my people are piteously enslaved to the fear of a God without a saving philosophy of life and liberty. You have a philosophy without a God; the Jews have a God but are largely without a philosophy of living as related thereto. Buddha, failing to envision God as a spirit and as a Father, failed to provide in his teaching the moral energy and the spiritual driving power which a religion must possess if it is to change a race and exalt a nation.”}
