--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -11,7 +11,7 @@
 \vs p134 1:6 About the time Jesus was preparing to leave Nazareth, the conductor of a large caravan which was passing through the city was taken violently ill, and Jesus, being a linguist, volunteered to take his place. Since this trip would necessitate his absence for a year, and inasmuch as all his brothers were married and his mother was living at home with Ruth, Jesus called a family conference at which he proposed that his mother and Ruth go to Capernaum to live in the home which he had so recently given to James. Accordingly, a few days after Jesus left with the caravan, Mary and Ruth moved to Capernaum, where they lived for the rest of Mary’s life in the home that Jesus had provided. Joseph and his family moved into the old Nazareth home.
 \vs p134 1:7 This was one of the more unusual years in the inner experience of the Son of Man; great progress was made in effecting working harmony between his human mind and the indwelling Adjuster. The Adjuster had been actively engaged in reorganizing the thinking and in rehearsing the mind for the great events which were in the not then distant future. The personality of Jesus was preparing for his great change in attitude toward the world. These were the in\hyp{}between times, the transition stage of that being who began life as God appearing as man, and who was now making ready to complete his earth career as man appearing as God.
 \usection{2.\bibnobreakspace The Caravan Trip to the Caspian}
-\vs p134 2:1 It was the first of April, A.D.\,24, when Jesus left Nazareth on the caravan trip to the Caspian Sea region. The caravan which Jesus joined as its conductor was going from Jerusalem by way of Damascus and Lake Urmia through Assyria, Media, and Parthia to the south\hyp{}eastern Caspian Sea region. It was a full year before he returned from this journey.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/The_caravan_conductor.jpg}\caption{The Caravan Conductor by Gerry~Metz}\end{figure}}
+\vs p134 2:1 It was the first of April, A.D.\,24, when Jesus left Nazareth on the caravan trip to the Caspian Sea region. The caravan which Jesus joined as its conductor was going from Jerusalem by way of Damascus and Lake Urmia through Assyria, Media, and Parthia to the south\hyp{}eastern Caspian Sea region. It was a full year before he returned from this journey.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Caravan-Conductor.jpg}\caption{The Caravan Conductor by Gerry~Metz}\end{figure}}
 \vs p134 2:2 For Jesus this caravan trip was another adventure of exploration and personal ministry. He had an interesting experience with his caravan family --- passengers, guards, and camel drivers. Scores of men, women, and children residing along the route followed by the caravan lived richer lives as a result of their contact with Jesus, to them, the extraordinary conductor of a commonplace caravan. Not all who enjoyed these occasions of his personal ministry profited thereby, but the vast majority of those who met and talked with him were made better for the remainder of their natural lives.
 \vs p134 2:3 Of all his world travels this Caspian Sea trip carried Jesus nearest to the Orient and enabled him to gain a better understanding of the Far\hyp{}Eastern peoples. He made intimate and personal contact with every one of the surviving races of Urantia excepting the red. He equally enjoyed his personal ministry to each of these varied races and blended peoples, and all of them were receptive to the living truth which he brought them. The Europeans from the Far West and the Asiatics from the Far East alike gave attention to his words of hope and eternal life and were equally influenced by the life of loving service and spiritual ministry which he so graciously lived among them.
 \vs p134 2:4 \pc The caravan trip was successful in every way. This was a most interesting episode in the human life of Jesus, for he functioned during this year in an executive capacity, being responsible for the material entrusted to his charge and for the safe conduct of the travellers making up the caravan party. And he most faithfully, efficiently, and wisely discharged his multiple duties.
@@ -85,7 +85,7 @@
 \vs p134 8:2 The first day, after he had left Tiglath, Jesus had ascended the mountain only a short way when he paused to pray. Among other things he asked his Father to send back the guardian seraphim to \textcolour{ubdarkred}{“be with Tiglath.”} He requested that he be permitted to go up to his last struggle with the realities of mortal existence alone. And his request was granted. He went into the great test with only his indwelling Adjuster to guide and sustain him.
 \vs p134 8:3 \pc Jesus ate frugally while on the mountain; he abstained from all food only a day or two at a time. The superhuman beings who confronted him on this mountain, and with whom he wrestled in spirit, and whom he defeated in power, were \bibemph{real;} they were his archenemies in the system of Satania; they were not phantasms of the imagination evolved out of the intellectual vagaries of a weakened and starving mortal who could not distinguish reality from the visions of a disordered mind.
 \vs p134 8:4 Jesus spent the last three weeks of August and the first three weeks of September on Mount Hermon. During these weeks he finished the mortal task of achieving the circles of mind\hyp{}understanding and personality\hyp{}control. Throughout this period of communion with his heavenly Father the indwelling Adjuster also completed the assigned services. The mortal goal of this earth creature was there attained. Only the final phase of mind and Adjuster attunement remained to be consummated.
-\vs p134 8:5 After more than five weeks of unbroken communion with his Paradise Father, Jesus became absolutely assured of his nature and of the certainty of his triumph over the material levels of time\hyp{}space personality manifestation. He fully believed in, and did not hesitate to assert, the ascendancy of his divine nature over his human nature.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Not_by_Bread_Alone.jpg}\caption{Not by Bread Alone by Michael~Dudash}\end{figure}}
+\vs p134 8:5 After more than five weeks of unbroken communion with his Paradise Father, Jesus became absolutely assured of his nature and of the certainty of his triumph over the material levels of time\hyp{}space personality manifestation. He fully believed in, and did not hesitate to assert, the ascendancy of his divine nature over his human nature.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Not-by-Bread-Alone.jpg}\caption{Not by Bread Alone by Michael~Dudash}\end{figure}}
 \vs p134 8:6 \pc Near the end of the mountain sojourn Jesus asked his Father if he might be permitted to hold conference with his Satania enemies as the Son of Man, as Joshua ben Joseph. This request was granted. During the last week on Mount Hermon the great temptation, the universe trial, occurred. Satan (representing Lucifer) and the rebellious Planetary Prince, Caligastia, were present with Jesus and were made fully visible to him. And this “temptation,” this final trial of human loyalty in the face of the misrepresentations of rebel personalities, had not to do with food, temple pinnacles, or presumptuous acts. It had not to do with the kingdoms of this world but with the sovereignty of a mighty and glorious universe. The symbolism of your records was intended for the backward ages of the world’s childlike thought. And subsequent generations should understand what a great struggle the Son of Man passed through that eventful day on Mount Hermon.
 \vs p134 8:7 To the many proposals and counterproposals of the emissaries of Lucifer, Jesus only made reply: \textcolour{ubdarkred}{“May the will of my Paradise Father prevail, and you, my rebellious son, may the Ancients of Days judge you divinely. I am your Creator\hyp{}father; I can hardly judge you justly, and my mercy you have already spurned. I commit you to the adjudication of the Judges of a greater universe.”}
 \vs p134 8:8 To all the Lucifer\hyp{}suggested compromises and makeshifts, to all such specious proposals about the incarnation bestowal, Jesus only made reply, \textcolour{ubdarkred}{“The will of my Father in Paradise be done.”} And when the trying ordeal was finished, the detached guardian seraphim returned to Jesus’ side and ministered to him.
