--- a/tex/p152.tex
+++ b/tex/p152.tex
@@ -4,7 +4,7 @@
 \vs p152 0:2 As Jesus went along with Jairus, the large crowd which had heard the father’s request followed on to see what would happen. Shortly before they reached the ruler’s house, as they hastened through a narrow street and as the throng jostled him, Jesus suddenly stopped, exclaiming, \textcolour{ubdarkred}{“Someone touched me.”} And when those who were near him denied that they had touched him, Peter spoke up: “Master, you can see that this crowd presses you, threatening to crush us, and yet you say ‘someone has touched me.’ What do you mean?” Then Jesus said: \textcolour{ubdarkred}{“I asked who touched me, for I perceived that living energy had gone forth from me.”} As Jesus looked about him, his eyes fell upon a near\hyp{}by woman, who, coming forward, knelt at his feet and said: “For years I have been afflicted with a scourging haemorrhage. I have suffered many things from many physicians; I have spent all my substance, but none could cure me. Then I heard of you, and I thought if I may but touch the hem of his garment, I shall certainly be made whole. And so I pressed forward with the crowd as it moved along until, standing near you, Master, I touched the border of your garment, and I was made whole; I know that I have been healed of my affliction.”
 \vs p152 0:3 When Jesus heard this, he took the woman by the hand and, lifting her up, said: \textcolour{ubdarkred}{“Daughter, your faith has made you whole; go in peace.”} It was her \bibemph{faith} and not her \bibemph{touch} that made her whole. And this case is a good illustration of many apparently miraculous cures which attended upon Jesus’ earth career, but which he in no sense consciously willed. The passing of time demonstrated that this woman was really cured of her malady. Her faith was of the sort that laid direct hold upon the creative power resident in the Master’s person. With the faith she had, it was only necessary to approach the Master’s person. It was not at all necessary to touch his garment; that was merely the superstitious part of her belief. Jesus called this woman, Veronica of Caesarea\hyp{}Philippi, into his presence to correct two errors which might have lingered in her mind, or which might have persisted in the minds of those who witnessed this healing: He did not want Veronica to go away thinking that her fear in attempting to steal her cure had been honoured, or that her superstition in associating the touch of his garment with her healing had been effective. He desired all to know that it was her pure and living \bibemph{faith} that had wrought the cure.
 \usection{1.\bibnobreakspace At Jairus’s House}
-\vs p152 1:1 Jairus was, of course, terribly impatient of this delay in reaching his home; so they now hastened on at quickened pace. Even before they entered the ruler’s yard, one of his servants came out, saying: “Trouble not the Master; your daughter is dead.” But Jesus seemed not to heed the servant’s words, for, taking with him Peter, James, and John, he turned and said to the grief\hyp{}stricken father: \textcolour{ubdarkred}{“Fear not; only believe.”} When he entered the house, he found the flute\hyp{}players already there with the mourners, who were making an unseemly tumult; already were the relatives engaged in weeping and wailing. And when he had put all the mourners out of the room, he went in with the father and mother and his three apostles. He had told the mourners that the damsel was not dead, but they laughed him to scorn. Jesus now turned to the mother, saying: \textcolour{ubdarkred}{“Your daughter is not dead; she is only asleep.”} And when the house had quieted down, Jesus, going up to where the child lay, took her by the hand and said, \textcolour{ubdarkred}{“Daughter, I say to you, awake and arise!”} And when the girl heard these words, she immediately rose up and walked across the room. And presently, after she had recovered from her daze, Jesus directed that they should give her something to eat, for she had been a long time without food.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Jeremy_Windborg_Jairus_Daughter_525x694.jpg}\caption{Jairus' Daughter by Jeremy Winborg}\end{figure}}
+\vs p152 1:1 Jairus was, of course, terribly impatient of this delay in reaching his home; so they now hastened on at quickened pace. Even before they entered the ruler’s yard, one of his servants came out, saying: “Trouble not the Master; your daughter is dead.” But Jesus seemed not to heed the servant’s words, for, taking with him Peter, James, and John, he turned and said to the grief\hyp{}stricken father: \textcolour{ubdarkred}{“Fear not; only believe.”} When he entered the house, he found the flute\hyp{}players already there with the mourners, who were making an unseemly tumult; already were the relatives engaged in weeping and wailing. And when he had put all the mourners out of the room, he went in with the father and mother and his three apostles. He had told the mourners that the damsel was not dead, but they laughed him to scorn. Jesus now turned to the mother, saying: \textcolour{ubdarkred}{“Your daughter is not dead; she is only asleep.”} And when the house had quieted down, Jesus, going up to where the child lay, took her by the hand and said, \textcolour{ubdarkred}{“Daughter, I say to you, awake and arise!”} And when the girl heard these words, she immediately rose up and walked across the room. And presently, after she had recovered from her daze, Jesus directed that they should give her something to eat, for she had been a long time without food.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jairus.jpg}\caption{Jairus' Daughter by Jeremy Winborg}\end{figure}}
 \vs p152 1:2 Since there was much agitation in Capernaum against Jesus, he called the family together and explained that the maiden had been in a state of coma following a long fever, and that he had merely aroused her, that he had not raised her from the dead. He likewise explained all this to his apostles, but it was futile; they all believed he had raised the little girl from the dead. What Jesus said in explanation of many of these apparent miracles had little effect on his followers. They were miracle\hyp{}minded and lost no opportunity to ascribe another wonder to Jesus. Jesus and the apostles returned to Bethsaida after he had specifically charged all of them that they should tell no man.
 \vs p152 1:3 \pc When he came out of Jairus’s house, two blind men led by a dumb boy followed him and cried out for healing. About this time Jesus’ reputation as a healer was at its very height. Everywhere he went the sick and the afflicted were waiting for him. The Master now looked much worn, and all of his friends were becoming concerned lest he continue his work of teaching and healing to the point of actual collapse.
 \vs p152 1:4 \pc Jesus’ apostles, let alone the common people, could not understand the nature and attributes of this God\hyp{}man. Neither has any subsequent generation been able to evaluate what took place on earth in the person of Jesus of Nazareth. And there can never occur an opportunity for either science or religion to check up on these remarkable events for the simple reason that such an extraordinary situation can never again occur, either on this world or on any other world in Nebadon. Never again, on any world in this entire universe, will a being appear in the likeness of mortal flesh, at the same time embodying all the attributes of creative energy combined with spiritual endowments which transcend time and most other material limitations.
