Conform to SRT at 31:11.0

--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -91,6 +91,6 @@
 \vs p031 10:20 \pc Evolutionary mortals are born on the planets of space, pass through the morontia worlds, ascend the spirit universes, traverse the Havona spheres, find God, attain Paradise, and are mustered into the primary Corps of the Finality, therein to await the next assignment of universe service. There are six other assembling finality corps, but Grandfanda, the first mortal ascender, presides as Paradise chief of all orders of finaliters. And as we view this sublime spectacle, we all exclaim: What a glorious destiny for the animal\hyp{}origin children of time, the material sons of space!
 \vsetoff
 \vs p031 10:21 [Jointly sponsored by a Divine Counsellor and One without Name and Number authorized so to function by the Ancients of Days on Uversa.]
-\separatorline
+\vs p031 11:0 \separatorline
 \vs p031 10:22 These 31 papers depicting the nature of Deity, the reality of Paradise, the organization and working of the central and superuniverses, the personalities of the grand universe, and the high destiny of evolutionary mortals, were sponsored, formulated, and put into English by a high commission consisting of 24 Orvonton administrators acting in accordance with a mandate issued by the Ancients of Days of Uversa directing that we should do this on Urantia, 606 of Satania, in Norlatiadek of Nebadon, in the year A.D.\,1934.
 \quizlink
