Simplify the footnote about Heisenberg Principle

--- a/tex/p065.tex
+++ b/tex/p065.tex
@@ -61,7 +61,7 @@
 \vs p065 5:3 The universe of universes, including this small world called Urantia, is not being managed merely to meet our approval nor just to suit our convenience, much less to gratify our whims and satisfy our curiosity. The wise and all\hyp{}powerful beings who are responsible for universe management undoubtedly know exactly what they are about; and so it becomes Life Carriers and behoves mortal minds to enlist in patient waiting and hearty co\hyp{}operation with the rule of wisdom, the reign of power, and the march of progress.
 \vs p065 5:4 There are, of course, certain compensations for tribulation, such as Michael’s bestowal on Urantia. But irrespective of all such considerations, the later celestial supervisors of this planet express complete confidence in the ultimate evolutionary triumph of the human race and in the eventual vindication of our original plans and life patterns.
 \usection{6.\bibnobreakspace Evolutionary Techniques of Life}
-\vs p065 6:1 It is impossible accurately to determine, simultaneously, the exact location and the velocity of a moving object\fnst{\textbf{the exact location and the velocity}, This is known in quantum mechanics as the \bibemph{Heisenberg's Uncertainty Principle}: $\Delta x \Delta p \geqslant {\hbar\over 2}$ It is interesting to notice that this uncertainty is related to the \bibemph{measurement} and is not a fundamental property of the so-called ``quantum systems''.}; any attempt at measurement of either inevitably involves change in the other. The same sort of a paradox confronts mortal man when he undertakes the chemical analysis of protoplasm. The chemist can elucidate the chemistry of \bibemph{dead} protoplasm, but he cannot discern either the physical organization or the dynamic performance of \bibemph{living} protoplasm. Ever will the scientist come nearer and nearer the secrets of life, but never will he find them and for no other reason than that he must kill protoplasm in order to analyse it\fnst{\textbf{kill protoplasm in order to analyse it}, The idea that our knowledge of the living cell is complementary to the complete knowledge of its molecular structure goes back to Niels Bohr. He suggested that the complete knowledge of this structure can be achieved only by operations that destroy the life of the cell and so it is logically possible that life precludes the complete determinations of its underlying physicochemical structure. See W.~Heisenberg, ``Physics and Philosophy'', 1958, p.\,104.}. Dead protoplasm weighs the same as living protoplasm, but it is not the same.
+\vs p065 6:1 It is impossible accurately to determine, simultaneously, the exact location and the velocity of a moving object\fnst{\textbf{the exact location and the velocity}, This is known in quantum mechanics as the \bibemph{Heisenberg's Uncertainty Principle}: $\Delta x\Delta p\geqslant\hbar/2$. It is interesting to notice that this uncertainty is related to the \bibemph{measurement} and is not a fundamental property of the so-called ``quantum systems''.}; any attempt at measurement of either inevitably involves change in the other. The same sort of a paradox confronts mortal man when he undertakes the chemical analysis of protoplasm. The chemist can elucidate the chemistry of \bibemph{dead} protoplasm, but he cannot discern either the physical organization or the dynamic performance of \bibemph{living} protoplasm. Ever will the scientist come nearer and nearer the secrets of life, but never will he find them and for no other reason than that he must kill protoplasm in order to analyse it\fnst{\textbf{kill protoplasm in order to analyse it}, The idea that our knowledge of the living cell is complementary to the complete knowledge of its molecular structure goes back to Niels Bohr. He suggested that the complete knowledge of this structure can be achieved only by operations that destroy the life of the cell and so it is logically possible that life precludes the complete determinations of its underlying physicochemical structure. See W.~Heisenberg, ``Physics and Philosophy'', 1958, p.\,104.}. Dead protoplasm weighs the same as living protoplasm, but it is not the same.
 \vs p065 6:2 \pc There is original endowment of adaptation in living things and beings. In every \bibemph{living} plant or animal cell, in every \bibemph{living} organism --- material or spiritual --- there is an insatiable craving for the attainment of ever\hyp{}increasing perfection of environmental adjustment, organismal adaptation, and augmented life realization. These interminable efforts of all living things evidence the existence within them of an innate striving for perfection.
 \vs p065 6:3 The most important step in plant evolution was the development of chlorophyll\hyp{}making ability, and the second greatest advance was the evolution of the spore into the complex seed. The spore is most efficient as a reproductive agent, but it lacks the potentials of variety and versatility inherent in the seed.
 \vs p065 6:4 One of the most serviceable and complex episodes in the evolution of the higher types of animals consisted in the development of the ability of the iron in the circulating blood cells to perform in the double role of oxygen carrier and carbon dioxide remover. And this performance of the red blood cells illustrates how evolving organisms are able to adapt their functions to varying or changing environment. The higher animals, including man, oxygenate their tissues by the action of the iron of the red blood cells, which carries oxygen to the living cells and just as efficiently removes the carbon dioxide. But other metals can be made to serve the same purpose. The cuttlefish employs copper for this function, and the sea squirt utilizes vanadium.
