Add thanks to Michael Hanian

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,7 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{17}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
@@ -37,7 +37,9 @@ INTRODUCTION
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
-Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
+I am also grateful to my friend Michael Hanian for many stimulating and fruitful discussions on the possible meaning of
+various difficult parts of the Revelation.
+Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and friend.
 
 \tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
